--- a/m/my/myi/myimghost.com.html
+++ b/m/my/myi/myimghost.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the myimghost.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216163240id_/http%3A//www.myimghost.com/info.php%3Fact%3Dprivacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the myimghost.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616131646id_/http%3A//www.myimghost.com/info.php%3Fact%3Dprivacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/2002/REC-xhtml1-20020801/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-gb" xml:lang="en-gb"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -7,8 +7,8 @@
 <meta http-equiv="Content-Language" content="en-gb">
 <meta http-equiv="imagetoolbar" content="no">
 <title>MYIMGHOST » More Information » Privacy Policy</title>
-<meta name="keywords" content="image hosting, free image hosting, uncensored image hosting, image hosting service, multiple image hosting, unlimited bandwidth, photo hosting, picture hosting, quick image hosting">
-<meta name="description" content="MYIMGHOST.com - Free Uncensored Image Hosting">
+<meta name="keywords" content="adult image hosting, free image hosting, free gallery hosting, adult,hosting,gallery,free,image host,uncensored image hosting, image hosting service, multiple image hosting, unlimited bandwidth, photo hosting, picture hosting, quick image hosting">
+<meta name="description" content="MYIMGHOST.com - Free Adult Image Hosting">
 <base href="http://www.myimghost.com/">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="screen">
 <link rel="shortcut icon" href="css/images/favicon.ico">
@@ -19,29 +19,110 @@
 	color: #7AC5E4;
 }
 </style>
+
+
+
+
+
+<link rel="shortcut icon" href="/PATH_TO_STATIC_FAVICON/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/PATH_TO_ANIMATED_FAVICON/favicon.ico" type="image/x-icon">
+
+
+
+
+<script>
+
+//Pop-under window- By JavaScript Kit
+//Credit notice must stay intact for use
+//Visit http://javascriptkit.com for this script
+
+//specify page to pop-under
+var popunder="http://www.sickpromo.net/affiliate//idevaffiliate.php?id=102&url=1"
+
+//specify popunder window features
+//set 1 to enable a particular feature, 0 to disable
+var winfeatures="width=1024,height=800,scrollbars=1,resizable=1,toolbar=1,location=1,menubar=1,status=1,directories=0"
+
+//Pop-under only once per browser session? (0=no, 1=yes)
+//Specifying 0 will cause popunder to load every time page is loaded
+var once_per_session=1
+
+///No editing beyond here required/////
+
+function get_cookie(Name) {
+  var search = Name + "="
+  var returnvalue = "";
+  if (document.cookie.length > 0) {
+    offset = document.cookie.indexOf(search)
+    if (offset != -1) { // if cookie exists
+      offset += search.length
+      // set index of beginning of value
+      end = document.cookie.indexOf(";", offset);
+      // set index of end of cookie value
+      if (end == -1)
+         end = document.cookie.length;
+      returnvalue=unescape(document.cookie.substring(offset, end))
+      }
+   }
+  return returnvalue;
+}
+
+function loadornot(){
+if (get_cookie('popunder')==''){
+loadpopunder()
+document.cookie="popunder=yes"
+}
+}
+
+function loadpopunder(){
+win2=window.open(popunder,"",winfeatures)
+win2.blur()
+window.focus()
+}
+
+if (once_per_session==0)
+loadpopunder()
+else
+loadornot()
+
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </head>
 <body class="page_cell">
 	<div class="logo"></div>
 <div style="background-color: #FFFFFF;" align="center">
-<!-- Begin: Black Label Ads, Generated: 2008-10-02 20:21:22  -->
-<script type="text/javascript">
-var AdBrite_Title_Color = '000000';
-var AdBrite_Text_Color = '000000';
-var AdBrite_Background_Color = 'FFFFFF';
-var AdBrite_Border_Color = 'CCCCCC';
-var AdBrite_URL_Color = '66B5FF';
-try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
-</script>
-<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=732781&zs=3732385f3930&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=732781&amp;zs=3732385f3930&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20081216163240id_%2Fhttp%253A%2F%2Fwww.myimghost.com%2Finfo.php%253Fact%253Dprivacy_policy" type="text/javascript"></script>
-<a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=732781&amp;afsid=55544"><img src="http://files.adbrite.com/mb/images/adbrite-your-ad-here-leaderboard.gif" style="background-color:#CCCCCC;border:none;padding:0;margin:0;" alt="Your Ad Here" width="14" height="90" border="0"></a></span>
-<!-- End: Black Label Ads --></div>
+
+
+
+
+
+
+
 	<div class="nav_menu">
 		<ul>
+            <li><a href="home.php">Home</a></li>
 			<li><a href="index.php"><span lang="en-us">Upload Images</span></a></li>
 			<li><a href="contact.php?act=file_report">Report File(s)</a></li>
 			<li><a href="index.php?do_random=true">Random Image</a></li>
 			<li><a href="info.php?act=about_us">About Us</a></li>
 			<li><a href="info.php?act=rules">Terms of Service</a></li>
+            <li><a href="http://www.friendjam.com">MySpace FriendAdder</a></li>
 		</ul>
 	</div>
 	<div class="members_bar">
@@ -51,7 +132,7 @@ try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document
 				</span>&nbsp;|<span lang="en-us">&nbsp; </span>&nbsp;<a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=register&amp;return=aHR0cDovL3d3dy5teWltZ2hvc3QuY29tL2luZm8ucGhwP2FjdD1wcml2YWN5X3BvbGljeQ==', 'register_lightbox');"><strong><span class="style1">Register</span></strong></a><span lang="en-us">&nbsp;
 				</span>&nbsp;)
 			</div>
-			</div>
+		</div>
 	<div id="page_body" class="page_body">
 
 
@@ -81,10 +162,10 @@ If you have any question, please do not hesitate to <a href="contact.php?act=con
 		</script>
 		<script type="text/javascript" src="http://s7.addthis.com/js/addthis_widget.php?v=12"></script>
 		<!-- AddThis Bookmark Button END -->
-		| Page Views: 4,128,758 | 
+		| Page Views: 10,860,718 | 
 		There is <strong><a href="http://whos.amung.us/show/hz36k7bp"><img src="http://whos.amung.us/swidget/hz36k7bp.gif" alt="web counter" width="80" height="15" border="0"></a></strong>	and <strong>uploading images</strong> right now!</div>
 	
-	
+	</div>
 
 
 <!-- Powered by Mihalism Multi Host - Copyright (c) 2007, 2008 Mihalism, Inc. (www.mihalism.com) --></body></html>
