--- a/s/sa/sai/sailnet.com.html
+++ b/s/sa/sai/sailnet.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sailnet.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216162044id_/http%3A//www.sailnet.com/forums/sn_privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sailnet.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616132258id_/http%3A//www.sailnet.com/forums/sn_privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html dir="ltr" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -537,11 +537,12 @@ function next_it()
 			<li><a href="http://shop.sailnet.com/index.php?category=Charts|pixel_trans.gif&amp;level=0">Charts</a></li>
 			<li><a href="http://shop.sailnet.com/index.php?category=Clothing|bomber.gif&amp;level=0">Clothing</a></li>
 			<li><a href="http://shop.sailnet.com/index.php?category=Electrical|wire.jpg&amp;level=0">Electrical</a></li>
-			<li><a href="http://shop.sailnet.com/index.php?category=Electronics|electronics.jpg&amp;level=0">Electronics</a></li>
+			<li><a href="http://shop.sailnet.com/index.php?category=Consumer%20Electronics|pixel_trans.gif&amp;level=0">Electronics</a></li>
 			<li><a href="http://shop.sailnet.com/index.php?category=Engine|engine_parts.jpeg&amp;level=0">Engine</a></li>
 			<li><a href="http://shop.sailnet.com/index.php?category=Hatches%20and%20Portlights|hatch.jpg&amp;level=0">Hatches and Portlights</a></li>
 			<li><a href="http://shop.sailnet.com/index.php?category=Interior%20And%20Galley|galley.jpg&amp;level=0">Interior And Galley</a></li>
 			<li><a href="http://shop.sailnet.com/index.php?category=Maintenance|pixel_trans.gif&amp;level=0">Maintenance</a></li>
+<li><a href="http://shop.sailnet.com/index.php?category=Marine%20Electronics%7Celectronics.jpg&amp;level=0">Marine Electronics</a></li>
 			<li><a href="http://shop.sailnet.com/index.php?category=Navigation|compass.gif&amp;level=0">Navigation</a></li>
 			<li><a href="http://shop.sailnet.com/index.php?category=Other|pixel_trans.gif&amp;level=0">Other Items</a></li>
 			<li><a href="http://shop.sailnet.com/index.php?category=Plumbing%20and%20Pumps|47053.jpg&amp;level=0">Plumbing  and Pumps</a></li>
@@ -648,10 +649,10 @@ src="https://app.serviceengine.com/cgi-bin/cfml?template=/cgi-scripts/SSLLPSNInt
 		
 		
 <center>
-<table width="140" border="0" cellspacing="0" cellpadding="0" bgcolor="#FFFFFF">
+<table width="136" border="0" cellspacing="0" cellpadding="0" bgcolor="#FFFFFF">
   <tbody><tr>
     <td width="136" align="right" valign="bottom">
-	  <table width="140" border="0" align="center" bgcolor="#0000FF" style="font-family: Verdana, sans-serif; font-size:13px; line-height:14px; color:#ffffff; ">
+	  <table width="136" border="0" align="center" bgcolor="#0000FF" style="font-family: Verdana, sans-serif; font-size:13px; line-height:14px; color:#ffffff; ">
         <tbody><tr>
 		  <td height="22" align="center"><strong>Shop the<br>SailNet Store</strong></td>		  
         </tr>
@@ -660,19 +661,20 @@ src="https://app.serviceengine.com/cgi-bin/cfml?template=/cgi-scripts/SSLLPSNInt
   
   <tr>
     <td valign="top">
-	   <table style="font-family: Verdana, sans-serif; font-size:12px; line-height:14px; color:#333; " align="center" width="136" border="0" cellpadding="3" cellspacing="0">	  
+	   <table style="font-family: Verdana, sans-serif; font-size:11px; line-height:14px; color:#333; " align="center" width="136" border="0" cellpadding="3" cellspacing="0">	  
         <tbody><tr>
 		  <td align="left" bgcolor="#FFFFFF">
-<a href="http://shop.sailnet.com/index.php?category=Anchor%20Locker|pixel_trans.gif&amp;level=0">Anchor Locker</a><br>
+			<a href="http://shop.sailnet.com/index.php?category=Anchor%20Locker|pixel_trans.gif&amp;level=0">Anchor Locker</a><br>
 			<a href="http://shop.sailnet.com/index.php?category=Boatbuilding%20/%20Repair|pixel_trans.gif&amp;level=0">Boatbuilding &amp; Repair</a><br>
 			<a href="http://shop.sailnet.com/index.php?category=Charts|pixel_trans.gif&amp;level=0">Charts</a><br>
 			<a href="http://shop.sailnet.com/index.php?category=Clothing|bomber.gif&amp;level=0">Clothing</a><br>
 			<a href="http://shop.sailnet.com/index.php?category=Electrical|wire.jpg&amp;level=0">Electrical</a><br>
-			<a href="http://shop.sailnet.com/index.php?category=Electronics|electronics.jpg&amp;level=0">Electronics</a><br>
+			<a href="http://shop.sailnet.com/index.php?category=Consumer%20Electronics|pixel_trans.gif&amp;level=0">Electronics</a><br>
 			<a href="http://shop.sailnet.com/index.php?category=Engine|engine_parts.jpeg&amp;level=0">Engine</a><br>
 			<a href="http://shop.sailnet.com/index.php?category=Hatches%20and%20Portlights|hatch.jpg&amp;level=0">Hatches and Portlights</a><br>
 			<a href="http://shop.sailnet.com/index.php?category=Interior%20And%20Galley|galley.jpg&amp;level=0">Interior And Galley</a><br>
 			<a href="http://shop.sailnet.com/index.php?category=Maintenance|pixel_trans.gif&amp;level=0">Maintenance</a><br>
+<a href="http://shop.sailnet.com/index.php?category=Marine%20Electronics%7Celectronics.jpg&amp;level=0">Marine Electronics</a><br>
 			<a href="http://shop.sailnet.com/index.php?category=Navigation|compass.gif&amp;level=0">Navigation</a><br>
 			<a href="http://shop.sailnet.com/index.php?category=Other|pixel_trans.gif&amp;level=0">Other Items</a><br>
 			<a href="http://shop.sailnet.com/index.php?category=Plumbing%20and%20Pumps|47053.jpg&amp;level=0">Plumbing  and Pumps</a><br>
@@ -688,36 +690,23 @@ src="https://app.serviceengine.com/cgi-bin/cfml?template=/cgi-scripts/SSLLPSNInt
 	</tr>
 	</tbody></table> 
 </center>		
-		
-<br><br>		
-		
-		
-		
-		<script type="text/javascript"><!--
-google_ad_client = "pub-3361200530090001";
-/* 160x600, created 10/29/08 */
-google_ad_slot = "8518489948";
-google_ad_width = 160;
-google_ad_height = 600;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-		<center>
-		<table border="1" align="center"><tbody><tr><td>
-		<a rel="nofollow" href="http://www.sailnet.com/phpads/adclick.php?n=a9c6b078" target="_blank"><img src="http://www.sailnet.com/phpads/adview.php?what=zone:1&amp;n=a9c6b078" border="0" alt=""></a>
-		</td></tr></tbody></table>
-		</center>
-		<br>
 
-		<center>
-		<table align-center="" border="1"><tbody><tr><td>
-			<a rel="nofollow" href="http://www.sailnet.com/phpads/adclick.php?n=a9e28684" target="_blank"><img src="http://www.sailnet.com/phpads/adview.php?what=zone:2&amp;n=a9e28684" border="0" alt=""></a>
-		</td></tr></tbody></table>
-		</center>
-		<br>
-	</center></td>
-	<td valign="top" width="*">
+<center>
+<table border="0" align="center"><tbody><tr><td>
+<a rel="nofollow" href="http://www.sailnet.com/phpads/adclick.php?n=a9c6b078" target="_blank"><img src="http://www.sailnet.com/phpads/adview.php?what=zone:1&amp;n=a9c6b078" border="0" alt=""></a>
+</td></tr></tbody></table>
+</center>
+<br>
+
+
+<center>
+<table align="center" border="0"><tbody><tr><td>
+<a rel="nofollow" href="http://www.sailnet.com/phpads/adclick.php?n=a9e28684" target="_blank"><img src="http://www.sailnet.com/phpads/adview.php?what=zone:2&amp;n=a9e28684" border="0" alt=""></a>
+</td></tr></tbody></table>
+</center>
+<br>
+</center></td>
+<td valign="top" width="*">
 
 <!-- open content container -->
 
@@ -835,6 +824,8 @@ function password_field()
 		<td class="vbmenu_control"><a href="members/list/">Members List</a></td>
 		<td class="vbmenu_control"><a href="worldmap.php">Members Map</a></td>
 		<td class="vbmenu_control"><a href="calendar.php">Calendar</a></td>
+		
+		
 				
 			
 				<td class="vbmenu_control"><a href="search.php" accesskey="4">Search</a></td>
@@ -849,6 +840,9 @@ function password_field()
 	</tr>
 	</tbody></table>
 </div>
+
+
+
 <!-- / nav buttons bar -->
 
 <br>
@@ -958,7 +952,7 @@ google_ad_height = 90;
 		    document.write ("&amp;referer=" + escape(document.referrer));
 		 document.write ("'><" + "/script>");
 		//-->
-		</script><script language="JavaScript" type="text/javascript" src="http://www.sailnet.com/phpads/adjs.php?n=901456544&amp;what=zone:5&amp;block=1&amp;blockcampaign=1&amp;exclude=,"></script><noscript><a rel='nofollow' href='http://www.sailnet.com/phpads/adclick.php?n=a1e11430' target='_blank'><img src='http://www.sailnet.com/phpads/adview.php?what=zone:5&amp;n=a1e11430' border='0' alt=''></a></noscript>
+		</script><script language="JavaScript" type="text/javascript" src="http://www.sailnet.com/phpads/adjs.php?n=727628988&amp;what=zone:5&amp;block=1&amp;blockcampaign=1&amp;exclude=,"></script><noscript><a rel='nofollow' href='http://www.sailnet.com/phpads/adclick.php?n=a1e11430' target='_blank'><img src='http://www.sailnet.com/phpads/adview.php?what=zone:5&amp;n=a1e11430' border='0' alt=''></a></noscript>
 	</center>
 
 
@@ -999,7 +993,13 @@ google_ad_height = 90;
 <form action="http://www.sailnet.com/forums/" method="get">
 	
 <table cellpadding="6" cellspacing="0" border="0" width="100%" class="page" align="center">
-<tbody><tr>
+<tbody><tr align="right">
+	<td class="tcat" nowrap="nowrap">
+		<span class="smallfont">Page generated in 0.1544 seconds (31.40% PHP - 68.60% MySQL) with 7 queries</span>
+	</td>
+</tr>
+
+<tr>
 	
 		<td class="tfoot">
 			<select name="styleid" onchange="switch_id(this, 'style')">
@@ -1039,7 +1039,7 @@ google_ad_height = 90;
 <div align="center">
 	<div class="smallfont" align="center">
 	<!-- Do not remove this copyright notice -->
-	Powered by vBulletin® Version 3.6.4<br>Copyright ©2000 - 2008, Jelsoft Enterprises Ltd.
+	Powered by vBulletin® Version 3.6.4<br>Copyright ©2000 - 2009, Jelsoft Enterprises Ltd.
 <br>SEO by <a rel="nofollow" href="http://www.crawlability.com/vbseo/">vBSEO</a> 3.0.0 RC8 
 	<!-- Do not remove this copyright notice -->
 	</div>
@@ -1049,7 +1049,7 @@ google_ad_height = 90;
 	
 	<!-- Do not remove  or your scheduled tasks will cease to function -->
 	
-	(c) Sailnet 2000-2006
+	(c) Sailnet 2000-2006<br>
 	</div>
 </div>
 
@@ -1089,7 +1089,7 @@ pageTracker._trackPageview();
       document.write ("&amp;referer=" + escape(document.referrer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://www.sailnet.com/phpads/adjs.php?n=514707026&amp;what=zone:6&amp;block=1&amp;exclude=,"></script><noscript><a rel='nofollow' href='http://www.sailnet.com/phpads/adclick.php?n=af3d423a' target='_blank'><img src='http://www.sailnet.com/phpads/adview.php?what=zone:6&amp;n=af3d423a' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://www.sailnet.com/phpads/adjs.php?n=425716785&amp;what=zone:6&amp;block=1&amp;exclude=,"></script><noscript><a rel='nofollow' href='http://www.sailnet.com/phpads/adclick.php?n=af3d423a' target='_blank'><img src='http://www.sailnet.com/phpads/adview.php?what=zone:6&amp;n=af3d423a' border='0' alt=''></a></noscript>
 </center>
 
 
@@ -1098,4 +1098,10 @@ pageTracker._trackPageview();
 
 </td></tr>
 </tbody></table>
+
+<!--VISISTAT SNIPPET//-->
+<script type="text/javascript">var DID=41019;</script>
+<script src="http://sniff.visistat.com/sniff.js" type="text/javascript"></script>
+<!--VISISTAT SNIPPET//-->
+
 </body></html>
