--- a/z/zi/zil/zillr.com.html
+++ b/z/zi/zil/zillr.com.html
@@ -1,19 +1,164 @@
-<!--The following is the downloaded HTML source of the zillr.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216162116id_/http%3A//www.zillr.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zillr.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616133134id_/http%3A//www.zillr.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-</head>
 
-<body style="color: #000000;
-  margin: 10px;
-  font-family: verdana, Arial, sans-serif; font-size: 11px;
-">
-  
-<h2>Privacy Policy</h2>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<title>ZillR :: Privacy Policy</title>
+<meta name="KEYWORDS" content="privacy policy , zillr">
+<meta name="DESCRIPTION" content="Read the detailed privacy policy of zillr to understand how we operate.">
+
+<link rel="shortcut icon" href="http://www.zillr.com/images/zillr_icon.gif">
+<link href="http://www.zillr.com/templates/def/stylesheet.css" rel="stylesheet" type="text/css">
+<link href="http://www.zillr.com/images/layout.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="http://www.zillr.com/includes/ajax.js">
+</script>
+
+</head>
+<body onload="show_bg()" oncontextmenu="return false;" background=""> 
+
+
+<script type="text/javascript">
+function show_bg(){
+    document.body.background = "";
+}
+</script>
+
+
+
+<div id="maincontainer">
+		<div class="innertube"><script type="text/javascript">
+    function toggleVisibility(box){
+        if (document.getElementById(box).style.display!="none"){
+            document.getElementById(box).style.display="none";
+            document.getElementById(box+'1').innerHTML = "<img src=http://www.zillr.com/images/hide.gif border=0 >";
+        }else{
+            document.getElementById(box).style.display="";
+            document.getElementById(box+'1').innerHTML = "<img src=http://www.zillr.com/images/show.gif border=0 >";
+        }
+    }
+</script>
+
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+	<tbody><tr>
+		<td class="leftTopSmallBox">
+		<img src="http://www.zillr.com/images/spacer.gif" width="7" height="7" alt=""></td>
+		<td class="coverBgColor" valign="top">
+			<div class="cover1pxFader"></div>
+		</td>
+		<td class="rightTopSmallBox">
+	</td></tr>
+	<tr>
+		<td width="6" class="coverLeftHeightBorder" valign="top"><img src="http://www.zillr.com/images/spacer.gif" alt=""></td>
+		<td class="coverBgColor" valign="top" align="left"> 
+<div style="float:left;  margin-right:20px;">
+        <a href="http://www.zillr.com/" style="text-decoration:none;">
+            <div style="font-size:60px; font-weight:bold;">
+              &nbsp;ZILLR
+            </div>
+        </a>
+ </div>
+<script type="text/javascript"><!--
+google_ad_client = "pub-7625587795197799";
+/* 728x90, created 5/11/09 */
+google_ad_slot = "3442317072";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+		</td>
+		<td width="6" class="coverRightHeightBorder" valign="top"><img src="http://www.zillr.com/images/spacer.gif" alt=""></td>
+	</tr>
+	<tr>
+		<td class="leftBottomSmallBox">
+		<img src="http://www.zillr.com/images/spacer.gif" width="7" height="7" alt=""></td>
+		<td class="coverBgColor" valign="bottom">
+			<div class="cover1pxFader"></div>
+		</td>
+		<td class="rightBottomSmallBox">
+	</td></tr>
+</tbody></table>
+ <br><br></div>
+		<div style=" float:left; clear:both;">
+<table width="160" align="left"><tbody><tr><td><div style="width:174px; float:left;">
+	<div class="leftTopSmallBox"></div>
+	<div class="leftbar7pxStrip">
+		<div class="leftbarFader1px"></div>
+	</div>
+
+	<div class="rightTopSmallBox"></div>
+
+	<div class="leftbarLeftHeightBox"><img src="http://www.zillr.com/images/spacer.gif" height="1" width="1" alt=""></div>
+		<div class="leftbarCenterHeightBox">		<div style="padding:2px 2px 2px 5px;">
+		<h2> Members Area </h2>
+		<div style="clear:both;"><img src="http://www.zillr.com/images/spacer.gif" width="100%" height="10" border="0"></div>
+	
+	
+		<div style="padding-left:10px;">
+			<div style="float:left;  height:15px;">Email:</div>
+			<form action="http://www.zillr.com/logincheck.php" method="post" style="display:inline">
+			<div style="float:left;  height:30px;"><input type="text" name="email" value=""> </div>
+			<div style="float:left;  height:15px;">Password</div>
+			<div style="float:left;  height:25px;"><input type="password" name="password"></div>
+			<div style="float:left;  height:20px;"><input type="checkbox" value="1" name="remember"> Remember Me &nbsp;&nbsp;&nbsp;&nbsp;</div>
+			<div style="float:left;  height:25px;"><input type="submit" value="Login" class="button"></div>
+			</form>
+		</div>
+	
+	</div>
+	
+	<div style="clear:both;"><img src="http://www.zillr.com/images/spacer.gif" width="100%" height="10" border="0"></div>
+	<div style="padding:2px 2px 2px 5px;">
+		<h2> Advertisements </h2>
+		<div style="clear:both;"><img src="http://www.zillr.com/images/spacer.gif" width="100%" height="10" border="0"></div>
+		<div style="padding-left:0px;">
+		  <a href="http://www.scanna.com/">Russian mail order brides</a>  <br>
+  <a href="http://www.russianbrides.com/">hot Russian brides</a>  <br>
+  <a href="http://www.themodernman.com/">Approach Women That You See</a>  <br>
+  <a href="http://www.chanceforlove.com/">Beautiful Russian bride</a>  <br>
+  <a href="http://dating.co.uk">http://dating.co.uk</a>  <br>
+  <a href="http://www.amolatina.com">colombian women</a>  <br>
+  <a href="http://www.orientbrides.com">asian girl</a>  <br>
+  <a href="http://www.anastasiaromance.com/">Russian woman</a>  <br>
+
+		</div>
+	</div>
+		
+		</div>
+	<div class="leftbarRightHeightBox"><img src="http://www.zillr.com/images/spacer.gif" height="1" width="1" alt=""></div>
+	
+	
+	
+	<div class="leftBottomSmallBox"><img src="http://www.zillr.com/images/spacer.gif" height="7" width="7" alt=""></div>
+	<div class="leftbar7pxStrip">
+		<div class="leftbarFader6px"> </div>
+		<div class="leftbarFader1px"></div>
+	</div>
+	
+	<div class="rightBottomSmallBox"><img src="http://www.zillr.com/images/spacer.gif" height="7" width="7" alt=""></div>
+
+</div></td></tr></tbody></table>
+<table align="center"><tbody><tr><td>
+	<table border="0" cellpadding="0" cellspacing="0" width="100%">
+	<tbody><tr>
+		<td class="leftTopSmallBox">
+		<img src="http://www.zillr.com/images/spacer.gif" width="7" height="7" alt=""></td>
+		<td class="coverBgColor" valign="top">
+			<div class="cover1pxFader"></div>
+		</td>
+		<td class="rightTopSmallBox">
+	</td></tr>
+	<tr>
+		<td width="6" class="coverLeftHeightBorder" valign="top"><img src="http://www.zillr.com/images/spacer.gif" alt=""></td>
+		<td class="coverBgColor" valign="top" align="left"> <a href="http://www.zillr.com/"><h1>Home</h1></a> &nbsp;&nbsp;»
+<h2>Privacy Policy</h2><br>
+<div style="clear:both;"><img src="http://www.zillr.com/images/spacer.gif" width="100%" height="10" border="0"></div>
+
 <br>
  
-<h3>About Us</h3>
+
 
 This is a privacy policy for ZillR. Our homepage on the Web is located at <a href="http://www.zillr.com">http://www.zillr.com.</a> The full text of our privacy policy is available on the web at [policy URL not specified] Users may go to 
 for information on how to opt-in or opt-out of use of their information.<br><br>
@@ -25,19 +170,19 @@ Mohali, Punjab 160071 <br>
 India <br><br>
 You may contact us by e-mail at <a href="mailto:support@zillr.com">support@zillr.com</a>. You may call us at +919872913245.  <br> <br>
 <br>
-<h3>Dispute Resolution and Privacy Seals</h3>
+<h2>Dispute Resolution and Privacy Seals</h2><br>
 
 We have no privacy seals or other assurance mechanisms.
 <br>
 <br>
 <br>
-<h3>Additional Information</h3>
+<h2>Additional Information</h2><br>
 
 This policy is valid until 31 Dec, 2009 at 12:00:00 EST.<br>
 <br>
 <br>
 
-<h3>Data Collection</h3>
+<h2>Data Collection</h2><br>
 P3P policies declare the data they collect in groups (also referred to as "statements"). This policy contains 2 data groups. The data practices of each group will be explained separately.<br>
 <br>
 <b>Group "Basic information"</b>
@@ -61,7 +206,7 @@ This data will be used by ourselves and our agents.<br><br>
 The following explanation is provided for why this data is collected:<br>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Data collected from all Web users: access logs, and search strings (if entered).<br>
 <br><br>
-<h3>Group "Cookies"</h3>
+<h2>Group "Cookies"</h2><br>
 At the user's option, we will collect the following data:<br><br>
 <li>HTTP cookies</li>
 <br>
@@ -75,7 +220,7 @@ This data will be used by ourselves and our agents.<br><br>
 The following explanation is provided for why this data is collected:<br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cookies are used to track visitors to our site, so we can better understand what portions of our site best serve you.<br>
 <br><br>
-<h3>Cookies</h3>
+<h2>Cookies</h2><br>
 Cookies are a technology which can be used to provide you with tailored information from a Web site. A cookie is an element of data that a Web site can send to your browser, which may then store it on your system. You can set your browser to notify you when you receive a cookie, giving you the chance to decide whether to accept it.<br>
 Our site makes use of cookies. Cookies are used for the following purposes:<br>
 <li>User targeting</li>
@@ -85,7 +230,7 @@ Our site makes use of cookies. Cookies are used for the following purposes:<br>
 <br>
 
 
-<h3>Compact Policy Summary</h3>
+<h2>Compact Policy Summary</h2><br>
 The compact policy which corresponds to this policy is:<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;    CP="ALL CURa ADMa DEVa TAIa OUR BUS IND UNI COM NAV INT"
 <br><br>
@@ -158,13 +303,79 @@ The following table explains the meaning of each field in the compact policy.<br
 The compact policy is sent by the Web server along with the cookies it describes. For more information, see the P3P deployment guide at <a href="http://www.w3.org/TR/p3pdeployment">http://www.w3.org/TR/p3pdeployment.</a>
 <br>
 <br><br> 
-<h3>Policy Evaluation</h3>
+<h2>Policy Evaluation</h2><br>
 Microsoft Internet Explorer 6 will evaluate this policy's compact policy whenever it is used with a cookie. The actions IE will take depend on what privacy level the user has selected in their browser (Low, Medium, Medium High, or High; the default is Medium. In addition, IE will examine whether the cookie's policy is considered satisfactory or unsatisfactory, whether the cookie is a session cookie or a persistent cookie, and whether the cookie is used in a first-party or third-party context. This section will attempt to evaluate this policy's compact policy against Microsoft's stated behavior for IE6.
 <br><br>
 <b>Note:</b> this evaluation is currently experimental and should not be considered a substitute for testing with a real Web browser.
 <br>
 <br>
 <b>Satisfactory policy:</b> this compact policy is considered satisfactory according to the rules defined by Internet Explorer 6. IE6 will accept cookies accompanied by this policy under the High, Medium High, Medium, Low, and Accept All Cookies settings. <br>
+
+<div class="invisible"> _ _ _ _ _ _ _ _ _ _ _ _ _ _  _ _ _ _ _ _ _ _ _ _ _ _ _ _  _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _  _ _ _ _ _ _ _ _ _ _ _ _ _ _  _ _ _ _ _ _ _ _ _ _ _ _ _ _  _ _ _ _ _ _ _ _ _ _ _ _ _ _  _ _ _ _ _ _ _ _ _ _ _ _ _ _ </div>		</td>
+		<td width="6" class="coverRightHeightBorder" valign="top"><img src="http://www.zillr.com/images/spacer.gif" alt=""></td>
+	</tr>
+	<tr>
+		<td class="leftBottomSmallBox">
+		<img src="http://www.zillr.com/images/spacer.gif" width="7" height="7" alt=""></td>
+		<td class="coverBgColor" valign="bottom">
+			<div class="cover1pxFader"></div>
+		</td>
+		<td class="rightBottomSmallBox">
+	</td></tr>
+</tbody></table> 
+ </td></tr></tbody></table>
+	</div>
+	<div style="clear:both;">
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+	<tbody><tr>
+		<td class="leftTopSmallBox">
+		<img src="http://www.zillr.com/images/spacer.gif" width="7" height="7" alt=""></td>
+		<td class="coverBgColor" valign="top">
+			<div class="cover1pxFader"></div>
+		</td>
+		<td class="rightTopSmallBox">
+	</td></tr>
+	<tr>
+		<td width="6" class="coverLeftHeightBorder" valign="top"><img src="http://www.zillr.com/images/spacer.gif" alt=""></td>
+		<td class="coverBgColor" valign="top" align="left"> <div style="text-align:center;">
+	<a href="http://www.zillr.com/">Home</a> &nbsp;&nbsp;||&nbsp;&nbsp;
+	<a href="http://www.zillr.com/news/">News</a> &nbsp;&nbsp;||&nbsp;&nbsp;
+	<a href="http://www.zillr.com/about.php">About</a> &nbsp;&nbsp;||&nbsp;&nbsp;
+	<a href="http://www.zillr.com/contact.php">Contact</a> &nbsp;&nbsp;||&nbsp;&nbsp;
+	<a href="http://www.zillr.com/affiliate.php">Affiliate Program</a> &nbsp;&nbsp;||&nbsp;&nbsp;
+	<a href="http://www.zillr.com/faq.php">FAQ's</a> &nbsp;&nbsp;||&nbsp;&nbsp;
+	<a href="http://www.zillr.com/terms.php">Terms</a> &nbsp;&nbsp;||&nbsp;&nbsp;
+	<a href="http://www.zillr.com/privacy.php">Privacy</a> 
+
+</div>
+
+		</td>
+		<td width="6" class="coverRightHeightBorder" valign="top"><img src="http://www.zillr.com/images/spacer.gif" alt=""></td>
+	</tr>
+	<tr>
+		<td class="leftBottomSmallBox">
+		<img src="http://www.zillr.com/images/spacer.gif" width="7" height="7" alt=""></td>
+		<td class="coverBgColor" valign="bottom">
+			<div class="cover1pxFader"></div>
+		</td>
+		<td class="rightBottomSmallBox">
+	</td></tr>
+</tbody></table>
+ 
+<div style="clear:both; height:500px;">&nbsp;</div>
+
+<br> Execution time : 0.00790596008301
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-1056783-8");
+pageTracker._trackPageview();
+} catch(err) {}</script></div>
+</div>
+
 
 
 </body></html>
