teacherplanet.com (archived on 2009-06-16)
{
  "alexa_rank": 271155,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 4915,
  "classifier_probability": 0.83,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 17.25,
  "homepage_snapshot_redirected_domain": "teacherplanet.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090327112035id_/http://www.teacherplanet.com/calendar/calendar.php?op=cal&month=3&year=2009",
  "homepage_snapshot_url": "https://web.archive.org/web/20090327112035id_/http%3A//teacherplanet.com",
  "interval": "2009_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "theeducatorsnetwork.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616134521id_/http%3A//www.theeducatorsnetwork.com/privacy.php",
  "policy_title": "The Educators Network: Where Teachers Come First",
  "policy_url": "theeducatorsnetwork.com/privacy.php",
  "sha1": "3e668b5116c350d3e9f7fd6365bd837544503463",
  "simhash": 8567756236047072038,
  "simhash_updated": false,
  "site_hostname": "teacherplanet.com",
  "site_url": "http://teacherplanet.com",
  "smog": 16.77,
  "strict_updated": false,
  "timestamp": "20090616134521",
  "word_count": 704,
  "year": 2009
}

--- a/t/te/tea/teacherplanet.com.html
+++ b/t/te/tea/teacherplanet.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the teacherplanet.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216022043id_/http%3A//www.theeducatorsnetwork.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the teacherplanet.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616134521id_/http%3A//www.theeducatorsnetwork.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>The Educators Network: Where Teachers Come First</title>
@@ -17,14 +17,7 @@
         <tbody><tr>
           <td width="282"><img src="images/sitename.gif" width="282" height="70"></td>
           <td width="493">
-		  <iframe src="http://ad.doubleclick.net/adi/N1823.teacherplanet.com/B3144782.2;sz=728x90;ord=[timestamp]?" width="728" height="90" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" bordercolor="#000000">
-<SCRIPT language='JavaScript1.1' SRC="http://ad.doubleclick.net/adj/N1823.teacherplanet.com/B3144782.2;abr=!ie;sz=728x90;ord=[timestamp]?">
-</SCRIPT>
-<NOSCRIPT>
-<A HREF="http://ad.doubleclick.net/jump/N1823.teacherplanet.com/B3144782.2;abr=!ie4;abr=!ie5;sz=728x90;ord=[timestamp]?">
-<IMG SRC="http://ad.doubleclick.net/ad/N1823.teacherplanet.com/B3144782.2;abr=!ie4;abr=!ie5;sz=728x90;ord=[timestamp]?" BORDER=0 WIDTH=728 HEIGHT=90 ALT="Click Here"></A>
-</NOSCRIPT>
-</iframe>  
+		  <a href="http://teach02.com/adserver/click.php3?bannerID=19014"><img src="http://teach02.com/adserver/viewbanner.php3?bannerID=19014" width="340" height="70" alt="" border="0"></a>  
 </td>
         </tr>
       </tbody></table></td>
@@ -54,7 +47,7 @@
             <a href="http://www.work4teachers.com/">Jobs</a>  |&nbsp; <a href="http://www.books4teachers.com/">Books</a>&nbsp;| &nbsp;<a href="http://www.news4teachers.com/">News</a> 
             | &nbsp;<a href="http://www.gradebooks4teachers.com/">Gradebooks</a><a href="http://www.jokes4teachers.com"></a> | &nbsp;<a href="http://www.teacherfreebies.com">TeacherFreebies</a></td>
           <td width="144" align="right" class="dateform"> 
-            Monday Dec. 15, 2008            &nbsp; </td>
+            Tuesday Jun. 16, 2009            &nbsp; </td>
         </tr>
       </tbody></table></td>
   </tr>
@@ -139,15 +132,15 @@
     <td align="center"> <p>
 </p>
 <p>
-<a href="http://teach05.com/adserver/click.php3?bannerID=18981"><img src="http://teach05.com/adserver/viewbanner.php3?bannerID=18981" width="120" height="60" alt="" border="0"></a></p>
-<p>
-<a href="http://teach05.com/adserver/click.php3?bannerID=18943"><img src="http://teach05.com/adserver/viewbanner.php3?bannerID=18943" width="120" height="90" alt="" border="0"></a></p>
-<p>
-<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=4,0,2,0" width="120" height="120"> <param name="movie" value="http://www.theeducatorsnetwork.com/images/renlearn/AM-DVD.swf?clickTAG=http://www.theeducatorsnetwork.com/main/leads/AM.htm"> <param name="quality" value="high"><param name="menu" value="false"> <embed src="http://www.theeducatorsnetwork.com/images/relearn/AM-DVD.swf?clickTAG=http://www.theeducatorsnetwork.com/main/leads/AM.htm" quality="high" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" width="120" height="120" menu="false"></object></p>
-<p>
-<a href="http://teach05.com/adserver/click.php3?bannerID=18982"><img src="http://teach05.com/adserver/viewbanner.php3?bannerID=18982" width="120" height="90" alt="" border="0"></a></p>
+<a href="http://teach02.com/adserver/click.php3?bannerID=18942"><img src="http://teach02.com/adserver/viewbanner.php3?bannerID=18942" width="120" height="120" alt="" border="0"></a></p>
 <p>
 </p>
+<p>
+<script>mpt = new Date(); mpts = mpt.getTimezoneOffset() + mpt.getTime(); document.write('<a  href="http://ad.doubleclick.net/jump/N4753.theeducatorsnetwork.com/B3399219.4;sz=120x60;ord=' + mpts + '"><img src="http://ad.doubleclick.net/ad/N4753.theeducatorsnetwork.com/B3399219.4;sz=120x60;ord=' + mpts + '" alt="Click Here" border="0"></a>');</script><a href="http://ad.doubleclick.net/jump/N4753.theeducatorsnetwork.com/B3399219.4;sz=120x60;ord=1580458647304"><img src="http://ad.doubleclick.net/ad/N4753.theeducatorsnetwork.com/B3399219.4;sz=120x60;ord=1580458647304" alt="Click Here" border="0"></a></p>
+<p>
+<a href="http://teach02.com/adserver/click.php3?bannerID=19015"><img src="http://teach02.com/adserver/viewbanner.php3?bannerID=19015" width="125" height="125" alt="" border="0"></a></p>
+<p>
+<a href="http://teach02.com/adserver/click.php3?bannerID=3"><img src="http://teach02.com/adserver/viewbanner.php3?bannerID=3" width="120" height="120" alt="Free Software for Teachers" border="0"></a></p>
 <p>
 <a href="http://www.sitesforteachers.com/perl/rankem.pcgi?id=teninc"></a></p><a href="http://www.sitesforteachers.com/perl/rankem.pcgi?id=teninc">
 
@@ -303,7 +296,7 @@ Materials</a></td>
 
 <p></p>
 <p>
-<a href="http://teach05.com/adserver/click.php3?bannerID=1"><img src="http://teach05.com/adserver/viewbanner.php3?bannerID=1" width="120" height="240" alt="Free Software for Teachers" border="0"></a></p>
+<a href="http://teach02.com/adserver/click.php3?bannerID=1"><img src="http://teach02.com/adserver/viewbanner.php3?bannerID=1" width="120" height="240" alt="Free Software for Teachers" border="0"></a></p>
 <p>
 <a href="http://www.sitesforteachers.com/perl/rankem.pcgi?id=teninc"></a></p><a href="http://www.sitesforteachers.com/perl/rankem.pcgi?id=teninc">
 
@@ -444,13 +437,13 @@ document.write('<iframe id="datamain" src="'+iframesrc+'" width="140px" height="
   <tr>
     <td align="center">
 <p>
-<a href="http://teach05.com/adserver/click.php3?bannerID=18977"><img src="http://teach05.com/adserver/viewbanner.php3?bannerID=18977" width="120" height="600" alt="" border="0"></a></p>
+<script>mpt = new Date(); mpts = mpt.getTimezoneOffset() + mpt.getTime(); document.write('<a  href="http://ad.doubleclick.net/jump/N4753.theeducatorsnetwork.com/B3399219.5;sz=120x90;ord=' + mpts + '"><img src="http://ad.doubleclick.net/ad/N4753.theeducatorsnetwork.com/B3399219.5;sz=120x90;ord=' + mpts + '" alt="Click Here" border="0"></a>');</script><a href="http://ad.doubleclick.net/jump/N4753.theeducatorsnetwork.com/B3399219.5;sz=120x90;ord=1580458647338"><img src="http://ad.doubleclick.net/ad/N4753.theeducatorsnetwork.com/B3399219.5;sz=120x90;ord=1580458647338" alt="Click Here" border="0"></a></p>
 <p>
 </p>
 <p>
 </p>
 <p>
-<a href="http://teach05.com/adserver/click.php3?bannerID=18946"><img src="http://teach05.com/adserver/viewbanner.php3?bannerID=18946" width="120" height="600" alt="" border="0"></a></p>	</td>
+<a href="http://teach02.com/adserver/click.php3?bannerID=18946"><img src="http://teach02.com/adserver/viewbanner.php3?bannerID=18946" width="120" height="600" alt="" border="0"></a></p>	</td>
   </tr>
   <tr> 
     <td height="10"><img src="images/spacer.gif" width="5" height="10"></td>
@@ -494,17 +487,17 @@ document.write('<iframe id="datamain" src="'+iframesrc+'" width="140px" height="
   <tbody><tr> 
     <td width="865" align="center"><table width="735" border="0" cellspacing="0" cellpadding="4">
         <tbody><tr>
-    <td align="center" class="footernav"><a href="http://www.teacherplanet.com/">Home</a> | <a href="http://teacherplanet.com/contact-captcha.php">Advertise</a> | <a href="http://www.books4teachers.com/">Books</a> | <a href="http://www.certificates4teachers.com/">Certificates</a> | <a href="http://www.teacher.ca">Teacher.ca</a> | <a href="http://www.teacher.ca">Canuck Teachers </a> | <a href="http://www.esl4teachers.com/">ESL</a> | <a href="http://www.gradebooks4teachers.com/">Gradebooks</a> | <a href="http://www.torontoscondos.ca/">Toronto Condos For Sale</a> | <a href="http://www.mysecondmortgage.ca/">Second Mortgage Toronto</a> | <a href="http://www.grants4teachers.com/">Grants</a> | <a href="http://www.crazy4teachers.com/">Humor</a> | <a href="http://www.insurance4teachers.com/">Insurance</a> | <a href="http://www.jobs4teachers.com/">Jobs</a> | <a href="http://jokes4teachers.com">Jokes</a> | <a href="http://www.lessonplans4teachers.com/">Lesson Plans</a> | <a href="http://www.music4teachers.com/">Music</a> | <a href="http://www.news4teachers.com/">News</a> | <a href="http://www.globeteacher.com/">Newsletter</a> | <a href="http://www.onlinedegrees4teachers.com/">Online Degrees</a> | <a href="http://www.posters4teachers.com/">Posters</a> | <a href="http://www.quotes4teachers.com">Quotes</a> | <a href="http://www.resumes4teachers.com/">Resumes</a> | <a href="http://www.rubrics4teachers.com/">Rubrics</a> | <a href="http://www.teacherfreebies.com/">Savings</a> | <a href="http://theeducatorsnetwork.com/members.php">Sign Up</a> | <a href="http://www.myteachersoftware.com">Software</a> | <a href="http://www.teacherscollege.net">Teachers College</a> | <a href="http://www.myteachertools.com/">Teacher Tools</a> | <a href="http://www.units4teachers.com/">Theme Units</a> | <a href="http://www.worksheets4teachers.com/">Worksheets</a> | <a href="http://www.brampton.com">Brampton</a> | <a href="http://www.teacherplanet.com/contact.php">Contact Us</a> | <a href="http://www.thebramptonnews.com">Brampton News </a> | <a href="http://www.mapit.ca">Mapping</a> | <a href="http://www.fundraising4teachers.com">Fundraising</a> |  <a href="http://www.bramptonhouse.com">Homes</a> </td>
+    <td align="center" class="footernav"><a href="http://www.teacherplanet.com/">Home</a> | <a href="http://teacherplanet.com/contact-captcha.php">Advertise</a> | <a href="http://www.books4teachers.com/">Books</a> | <a href="http://www.certificates4teachers.com/">Certificates</a> | <a href="http://www.esl4teachers.com/">ESL</a> | <a href="http://www.gradebooks4teachers.com/">Gradebooks</a> | <a href="http://www.grants4teachers.com/">Grants</a> | <a href="http://www.crazy4teachers.com/">Humor</a> | <a href="http://www.insurance4teachers.com/">Insurance</a> | <a href="http://www.jobs4teachers.com/">Jobs</a> | <a href="http://jokes4teachers.com">Jokes</a> | <a href="http://www.lessonplans4teachers.com/">Lesson Plans</a> | <a href="http://www.music4teachers.com/">Music</a> | <a href="http://www.news4teachers.com/">News</a> | <a href="http://www.globeteacher.com/">Newsletter</a> | <a href="http://www.onlinedegrees4teachers.com/">Online Degrees</a> | <a href="http://www.posters4teachers.com/">Posters</a> | <a href="http://www.quotes4teachers.com">Quotes</a> | <a href="http://www.resumes4teachers.com/">Resumes</a> | <a href="http://www.rubrics4teachers.com/">Rubrics</a> | <a href="http://www.teacherfreebies.com/">Savings</a> | <a href="http://theeducatorsnetwork.com/members.php">Sign Up</a> | <a href="http://www.myteachersoftware.com">Software</a> | <a href="http://www.teacherscollege.net">Teachers College</a> | <a href="http://www.myteachertools.com/">Teacher Tools</a> | <a href="http://www.units4teachers.com/">Theme Units</a> | <a href="http://www.worksheets4teachers.com/">Worksheets</a> | <a href="http://www.teacherplanet.com/contact.php">Contact Us</a> |  </td>
   </tr>
         <tr>
-          <th scope="col"><a href="http://teach05.com/adserver/click.php3?bannerID=18944"><img src="http://teach05.com/adserver/viewbanner.php3?bannerID=18944" width="728" height="90" alt="" border="0"></a></th>
+          <th scope="col"><script>mpt = new Date(); mpts = mpt.getTimezoneOffset() + mpt.getTime(); document.write('<a  href="http://ad.doubleclick.net/jump/N4753.theeducatorsnetwork.com/B3399219.3;sz=728x90;ord=' + mpts + '"><img src="http://ad.doubleclick.net/ad/N4753.theeducatorsnetwork.com/B3399219.3;sz=728x90;ord=' + mpts + '" alt="Click Here" border="0"></a>');</script><a href="http://ad.doubleclick.net/jump/N4753.theeducatorsnetwork.com/B3399219.3;sz=728x90;ord=1580458647350"><img src="http://ad.doubleclick.net/ad/N4753.theeducatorsnetwork.com/B3399219.3;sz=728x90;ord=1580458647350" alt="Click Here" border="0"></a></th>
         </tr>
 
       </tbody></table></td>
   </tr>
   <!-- ISEARCH_BEGIN_INDEX -->
   <tr> 
-    <td height="19" align="center" valign="top" class="footernav">Copyright © 2001 - 2008 The Educators 
+    <td height="19" align="center" valign="top" class="footernav">Copyright © 2001 - 2009 The Educators 
       Network Inc. All rights reserved. 
       <a href="http://www.theeducatorsnetwork.com/privacy.php">Privacy Statement</a> 
       and <a href="http://www.theeducatorsnetwork.com/disclaimer.php">Disclaimer 
