zipcodezoo.com (archived on 2009-06-16)
{
  "alexa_rank": 82134,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 2575,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.65,
  "homepage_snapshot_redirected_domain": "zipcodezoo.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090330170909id_/http://zipcodezoo.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090330170909id_/http%3A//zipcodezoo.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "zipcodezoo.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616140335id_/http%3A//zipcodezoo.com/About/Privacy.asp",
  "policy_title": "ZipcodeZoo Privacy Highlights",
  "policy_url": "zipcodezoo.com/About/Privacy.asp",
  "sha1": "85f449638f3f9366cfadcc55a6f25df1e3711642",
  "simhash": 669527505995523143,
  "simhash_updated": false,
  "site_hostname": "zipcodezoo.com",
  "site_url": "http://zipcodezoo.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090616140335",
  "word_count": 393,
  "year": 2009
}

--- a/z/zi/zip/zipcodezoo.com.html
+++ b/z/zi/zip/zipcodezoo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the zipcodezoo.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216160747id_/http%3A//zipcodezoo.com/About/Privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zipcodezoo.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616140335id_/http%3A//zipcodezoo.com/About/Privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>ZipcodeZoo Privacy Highlights</title>
@@ -45,45 +45,40 @@ Nifty("div.blurbbrown","tl br big");
       Font Face: <a id="changeVerdana" title="Verdana" href="javascript:void(0)"> Verdana </a> | <a id="changeGeneva" title="Geneva" href="javascript:void(0)"> Geneva </a> | <a id="changeGeorgia" title="Georgia" href="javascript:void(0)"> Georgia </a> </p>
   </div>
 </div>
-<!-- begin /includes/v2/headermenu.inc -->
+<!-- begin headermenu.inc -->
 <div id="header">
 
 <div id="logo"><img src="/Common/V2/images/zipcodezoo300x110.jpg" width="291" height="105" alt=""></div>
 
-<div id="headsearch">
-<script language="JavaScript" type="text/javascript"> 
-<!--
-
+<!-- begin headsearch.inc --> <div id="headsearch">
+<script type="text/javascript"><!--//--><![CDATA[//><!--
   function doSrch() { 
+    var sf = document.getElementById("srchform");  
+    if (sf.SearchPhrase.value == "search ZipcodeZoo..."  
+     || sf.SearchPhrase.value == '') { 
+      sf.SearchPhrase.value = "";
+      return false
+    }
     document.documentElement.style.cursor="wait";
-    srchform.Submit.value="Please Wait...";
-    srchform.Submit.disabled="True";
+    sf.Submit.value="Please Wait...";
+    sf.Submit.disabled="True";
+    return true;
   }
 
-// -->
-</script>
+//--><!]]></script>
 
-<form name="srchform" method="post" action="/utilities/srch.asp" onsubmit="doSrch();">
-  <input type="text" name="SearchPhrase" class="txt" value="search ZipcodeZoo..." onfocus="if(this.value==this.defaultValue) this.value='';">
-  <input type="submit" name="Submit" value="Go!" title="Search Zipcode Zoo" class="btn">
+<form name="srchform" id="srchform" method="post" action="/utilities/srch.asp" onsubmit="return doSrch();">
+  <input type="text" name="SearchPhrase" id="SearchPhrase" class="txt" value="search ZipcodeZoo..." onfocus="{srchform.Submit.disabled=false; if(this.value==this.defaultValue) this.value='';} ">
+  <input type="submit" name="Submit" value="Go!" title="Search Zipcode Zoo" class="btn" disabled="disabled">
 </form>
+</div> <!-- end headsearch.inc -->
+
+
 </div>
-</div>
 
-
-<!-- begin announcement -->
-<div style="background:#FF0000;text-align: center;font-weight: bold;padding: 4px;border-top: 5px solid #5A7945;">
-<div style="background:#fff; width: 70%;margin: auto;padding: 4px;border: 2px solid #004400;">
-ZipcodeZoo.com needs to raise another $12,000 to reach our goal of $35,000 by year end.<br><a href="http://www.zipcodezoo.com/GetInvolved/">Please click here to donate</a>
-</div>
-</div>
-<!-- end announcement -->
-
-
-
+<!-- begin topmenu.inc -->
 <span class="preload1"></span>
 <span class="preload2"></span>
-
 
 <ul class="zzdropmenu">
 	<li class="first"></li>
@@ -94,6 +89,7 @@ ZipcodeZoo.com needs to raise another $12,000 to reach our goal of $35,000 by ye
                         <li><a href="/Rangers/">Ranger Home</a></li>
                         <li><a href="/Utilities/Register.asp">Set My Location</a></li>        
                         <li><a href="http://the2050project.com/">The 2050 Project</a></li>
+						<li><a href="/Trends/">Global Trends</a></li>
 		</ul>
 		<!--[if lte IE 6]></td></tr></table></a><![endif]-->
 	</li>
@@ -101,8 +97,8 @@ ZipcodeZoo.com needs to raise another $12,000 to reach our goal of $35,000 by ye
 <li class="top"><a href="javascript:void(0)" id="menu-listfind" class="top_link"><span class="down">List &amp; Find</span><!--[if gte IE 7]><!--></a><!--<![endif]-->
 		<!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul class="sub">
+                        <li><a href="/List/Proximity.asp">List Near You or Any Location</a></li>
 			<li><a href="/List/Regions.asp">List for Country or Region</a></li>
-                        <li><a href="/List/Proximity.asp">Proximity List for Lat./Long.</a></li>
                         <li><a href="/List/PlantFinder.asp">Plant Finder</a></li>
                         <li><a href="/List/BirdFinder.asp">Bird Finder</a></li>
                         <li><a href="/List/ButterflyFinder.asp">Butterfly Finder</a></li>
@@ -196,6 +192,7 @@ ZipcodeZoo.com needs to raise another $12,000 to reach our goal of $35,000 by ye
 		</ul>
 		<!--[if lte IE 6]></td></tr></table></a><![endif]-->
 	</li>
+	
 <li class="top"><a href="javascript:void(0)" id="menu-donate" class="top_link"><span class="down">Get Involved!</span><!--[if gte IE 7]><!--></a><!--<![endif]-->
 		<!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul class="sub">
@@ -203,9 +200,12 @@ ZipcodeZoo.com needs to raise another $12,000 to reach our goal of $35,000 by ye
 		</ul>
 		<!--[if lte IE 6]></td></tr></table></a><![endif]-->
 	</li>	
+
 <li class="last"></li>
 </ul>
-<!-- end /includes/v2/headermenu.inc -->
+<!-- end topmenu.inc -->
+
+<!-- end headermenu.inc -->
 <div id="maindiv">
   <div id="maindivcon" class="full">
     <h2 class="blue">ZipcodeZoo Privacy Highlights</h2>
@@ -273,7 +273,7 @@ ZipcodeZoo.com needs to raise another $12,000 to reach our goal of $35,000 by ye
       <li><a href="javascript:ReportProblem()">Report a Problem</a></li>
     </ul>
   </div>	
-<div id="footer"><p>© 2004-2008 the BayScience Foundation, Inc. All rights reserved.</p></div>
+<div id="footer"><p>© 2004-2009 the BayScience Foundation, Inc. All rights reserved.</p></div>
 
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
