baseball-reference.com (archived on 2009-06-16)
{
  "alexa_rank": 12609,
  "analysis_subcorpus": false,
  "categories": "sports",
  "char_count": 10975,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 18.84,
  "homepage_snapshot_redirected_domain": "baseball-reference.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090327144948id_/http://www.baseball-reference.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090327144948id_/http%3A//baseball-reference.com",
  "interval": "2009_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "sports-reference.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616144435id_/http%3A//www.sports-reference.com/privacy.shtml",
  "policy_title": "Sports-Reference.com Privacy Policy",
  "policy_url": "sports-reference.com/privacy.shtml",
  "sha1": "b4211ef0a4225a8710e7504a87706ec51169407e",
  "simhash": 2864186547111558485,
  "simhash_updated": false,
  "site_hostname": "baseball-reference.com",
  "site_url": "http://baseball-reference.com",
  "smog": 21.16,
  "strict_updated": false,
  "timestamp": "20090616144435",
  "word_count": 1750,
  "year": 2009
}

--- a/b/ba/bas/baseball-reference.com.html
+++ b/b/ba/bas/baseball-reference.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the baseball-reference.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216011827id_/http%3A//www.sports-reference.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the baseball-reference.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616144435id_/http%3A//www.sports-reference.com/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Sports-Reference.com Privacy Policy</title>
@@ -24,6 +24,14 @@
     <a href="http://www.pro-football-reference.com">Football</a> |
     <a href="http://www.hockey-reference.com/">Hockey</a> |
     <a href="http://www.sports-reference.com/olympics/">Olympics</a> 
+<br>
+  <a href="jobs_2009.shtml">Jobs</a> |
+  <a href="about.shtml">About</a> |
+<a href="contact.shtml">Contact</a>  | 
+<a href="privacy.shtml">Privacy Policy</a> | 
+<a href="termsofuse.shtml">Terms &amp; Conditions</a> | 
+<a href="data_use.shtml">Use of Data</a>
+
 </p></div>
 <a href="/"><img src="logo.png" border="0" alt="Sports-Reference.com" height="73" width="316"></a>
 </div>
@@ -266,10 +274,11 @@ the Site before the change was made.
 <a href="about.shtml">About Sports Reference</a> &nbsp;|&nbsp;
 <a href="contact.shtml">Contact Sports Reference</a> &nbsp;|&nbsp;
 <a href="privacy.shtml">Privacy Policy</a> &nbsp;|&nbsp;
-<a href="termsofuse.shtml">Terms and Conditions</a>
+<a href="termsofuse.shtml">Terms and Conditions</a> &nbsp;|&nbsp;
+<a href="data_use.shtml">Use of Data</a>
 
 <br>
-  Copyright © 2000-2008 Sports Reference, LLC, All rights reserved.
+  Copyright © 2000-2009 Sports Reference, LLC, All rights reserved.
 </div>
 
 
